@@ -1,3 +1,9 @@
+2005-12-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* elflint.c (check_one_reloc): If relocation section is not loaded,
+	don't check whether the relocations modify read-only sections or
+	loaded and unloaded sections.
+
 2005-11-28  Ulrich Drepper  <drepper@redhat.com>
 
 	* elflint.c (check_one_reloc): Take additional parameters.  Use
